--- a/src/App.css
+++ b/src/App.css
@@ -578,6 +578,10 @@ body, h1, p, button {
   margin-bottom: 1.5rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
@@ -602,6 +606,10 @@ body, h1, p, button {
   display: none;
 }
 
+.h-\[45px\] {
+  height: 45px;
+}
+
 .h-\[320px\] {
   height: 320px;
 }
@@ -618,20 +626,20 @@ body, h1, p, button {
   height: 100vh;
 }
 
-.h-\[45px\] {
-  height: 45px;
+.w-screen {
+  width: 100vw;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-screen {
-  width: 100vw;
-}
-
 .w-\[100\%\] {
   width: 100%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .max-w-\[500px\] {
@@ -666,45 +674,20 @@ body, h1, p, button {
   max-width: 150px;
 }
 
+.max-w-\[1000px\] {
+  max-width: 1000px;
+}
+
+.max-w-\[1500px\] {
+  max-width: 1500px;
+}
+
+.max-w-\[1300px\] {
+  max-width: 1300px;
+}
+
 .border-collapse {
   border-collapse: collapse;
-}
-
-@-webkit-keyframes bounce {
-  0%, 100% {
-    -webkit-transform: translateY(-25%);
-            transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-
-  50% {
-    -webkit-transform: none;
-            transform: none;
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
-@keyframes bounce {
-  0%, 100% {
-    -webkit-transform: translateY(-25%);
-            transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-
-  50% {
-    -webkit-transform: none;
-            transform: none;
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
-.animate-bounce {
-  -webkit-animation: bounce 1s infinite;
-          animation: bounce 1s infinite;
 }
 
 .cursor-pointer {
@@ -719,6 +702,10 @@ body, h1, p, button {
   flex-direction: column-reverse;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
 }
@@ -729,6 +716,12 @@ body, h1, p, button {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -753,11 +746,11 @@ body, h1, p, button {
   border-radius: 0.5rem;
 }
 
-.border-\[2px\] {
+.border-2 {
   border-width: 2px;
 }
 
-.border-2 {
+.border-\[2px\] {
   border-width: 2px;
 }
 
@@ -766,18 +759,22 @@ body, h1, p, button {
   border-bottom-width: 2px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
+.border-t-2 {
+  border-top-width: 2px;
 }
 
-.border-SoftBlue {
-  --tw-border-opacity: 1;
-  border-color: hsl(231 69% 60% / var(--tw-border-opacity));
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-\[\#fa5757\] {
   --tw-border-opacity: 1;
   border-color: rgb(250 87 87 / var(--tw-border-opacity));
+}
+
+.border-SoftBlue {
+  --tw-border-opacity: 1;
+  border-color: hsl(231 69% 60% / var(--tw-border-opacity));
 }
 
 .border-white {
@@ -800,14 +797,14 @@ body, h1, p, button {
   background-color: hsl(231 69% 60% / var(--tw-bg-opacity));
 }
 
-.bg-VeryDarkBlue {
-  --tw-bg-opacity: 1;
-  background-color: hsl(229 31% 21% / var(--tw-bg-opacity));
-}
-
 .bg-\[\#fa5757\] {
   --tw-bg-opacity: 1;
   background-color: rgb(250 87 87 / var(--tw-bg-opacity));
+}
+
+.bg-VeryDarkBlue {
+  --tw-bg-opacity: 1;
+  background-color: hsl(229 31% 21% / var(--tw-bg-opacity));
 }
 
 .bg-\[\#1c284ee8\] {
@@ -830,29 +827,14 @@ body, h1, p, button {
   padding: 0.5rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .px-5 {
@@ -863,6 +845,36 @@ body, h1, p, button {
 .py-\[6px\] {
   padding-top: 6px;
   padding-bottom: 6px;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .px-6 {
@@ -880,13 +892,17 @@ body, h1, p, button {
   padding-bottom: 0.75rem;
 }
 
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.pl-\[30px\] {
+  padding-left: 30px;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -899,22 +915,27 @@ body, h1, p, button {
   line-height: 1.75rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.font-semibold {
-  font-weight: 600;
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .text-VeryDarkBlue {
@@ -927,19 +948,19 @@ body, h1, p, button {
   color: hsl(229 8% 60% / var(--tw-text-opacity));
 }
 
-.text-white {
+.text-SoftRed {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: hsl(0 94% 66% / var(--tw-text-opacity));
+}
+
+.text-SoftBlue {
+  --tw-text-opacity: 1;
+  color: hsl(231 69% 60% / var(--tw-text-opacity));
 }
 
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .shadow-md {
@@ -993,11 +1014,106 @@ body, h1, p, button {
   }
 }
 
+@-webkit-keyframes left {
+  0% {
+    -webkit-transform: translateX(-200px);
+            transform: translateX(-200px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@keyframes left {
+  0% {
+    -webkit-transform: translateX(-200px);
+            transform: translateX(-200px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@-webkit-keyframes right {
+  0% {
+    -webkit-transform: translateX(200px);
+            transform: translateX(200px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@keyframes right {
+  0% {
+    -webkit-transform: translateX(200px);
+            transform: translateX(200px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
 .animated {
   -webkit-animation-duration: 1000ms;
           animation-duration: 1000ms;
   -webkit-animation-name: zoom;
           animation-name: zoom;
+}
+
+.animated-left {
+  -webkit-animation-duration: 1000ms;
+          animation-duration: 1000ms;
+  -webkit-animation-name: left;
+          animation-name: left;
+}
+
+.animated-right {
+  -webkit-animation-duration: 1000ms;
+          animation-duration: 1000ms;
+  -webkit-animation-name: right;
+          animation-name: right;
+}
+
+.spinned {
+  -webkit-animation-duration: 500ms;
+          animation-duration: 500ms;
+  -webkit-animation-name: spin;
+          animation-name: spin;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .hover\:border-SoftBlue:hover {
@@ -1015,6 +1131,11 @@ body, h1, p, button {
   background-color: rgb(250 87 87 / var(--tw-bg-opacity));
 }
 
+.hover\:text-\[\#fa5757\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(250 87 87 / var(--tw-text-opacity));
+}
+
 .hover\:text-SoftBlue:hover {
   --tw-text-opacity: 1;
   color: hsl(231 69% 60% / var(--tw-text-opacity));
@@ -1025,9 +1146,12 @@ body, h1, p, button {
   color: hsl(0 94% 66% / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#fa5757\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(250 87 87 / var(--tw-text-opacity));
+.focus\:border-0:focus {
+  border-width: 0px;
+}
+
+.focus\:outline-0:focus {
+  outline-width: 0px;
 }
 
 @media (min-width: 640px) {
@@ -1042,6 +1166,11 @@ body, h1, p, button {
 }
 
 @media (min-width: 768px) {
+  .md\:mx-3 {
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
+  }
+
   .md\:my-0 {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -1050,11 +1179,6 @@ body, h1, p, button {
   .md\:mx-2 {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
-  }
-
-  .md\:mx-5 {
-    margin-left: 1.25rem;
-    margin-right: 1.25rem;
   }
 
   .md\:mt-8 {
@@ -1077,20 +1201,24 @@ body, h1, p, button {
     display: none;
   }
 
+  .md\:h-\[300px\] {
+    height: 300px;
+  }
+
+  .md\:h-\[40px\] {
+    height: 40px;
+  }
+
   .md\:h-\[80px\] {
     height: 80px;
   }
 
-  .md\:h-\[200px\] {
-    height: 200px;
+  .md\:w-\[300px\] {
+    width: 300px;
   }
 
-  .md\:h-\[250px\] {
-    height: 250px;
-  }
-
-  .md\:h-auto {
-    height: auto;
+  .md\:w-auto {
+    width: auto;
   }
 
   .md\:w-\[45\%\] {
@@ -1105,12 +1233,8 @@ body, h1, p, button {
     width: 240px;
   }
 
-  .md\:w-\[300px\] {
-    width: 300px;
-  }
-
-  .md\:w-auto {
-    width: auto;
+  .md\:max-w-\[400px\] {
+    max-width: 400px;
   }
 
   .md\:max-w-\[500px\] {
@@ -1129,6 +1253,12 @@ body, h1, p, button {
     justify-content: space-between;
   }
 
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
   .md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1.5rem * var(--tw-space-x-reverse));
@@ -1144,14 +1274,14 @@ body, h1, p, button {
     padding-right: 4rem;
   }
 
-  .md\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
   .md\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
+  }
+
+  .md\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
   .md\:pr-8 {
@@ -1177,3 +1307,23 @@ body, h1, p, button {
     line-height: 1;
   }
 }
+
+@media (min-width: 1024px) {
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:w-\[300px\] {
+    width: 300px;
+  }
+
+  .lg\:max-w-full {
+    max-width: 100%;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+}
+
+
